# Ember

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  overlay.html  package-lock.json  package.json  release-please-config.json  settings.html  splash.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/ember-core/: Cargo.toml
crates/ember-core/src/: error.rs  health.rs  lib.rs  model.rs  modifiers.rs  overlay.rs  profile_path.rs  prompt.rs  providers.rs  retry.rs  selection.rs
crates/ember-core/src/engine/: finalize.rs  guard.rs  mask.rs  mod.rs  normalize.rs  strip.rs
docs/: macos-parity.md
docs/superpowers/plans/: 2026-06-30-ember-auto-refine-overhaul.md
docs/superpowers/specs/: 2026-06-30-ember-auto-refine-overhaul-design.md  2026-06-30-prompt-refiner-widget-design.md
scripts/: render-logo.mjs  sync-versions.mjs
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: overlay.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  flow.rs  foreground.rs  lib.rs  logging.rs  profile.rs  providers.rs  secrets.rs  selection.rs  state.rs
src/components/: BrandIcon.tsx  Logo.tsx  TitleBar.tsx
src/components/ui/: button.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx
src/lib/: ipc.ts  utils.ts
src/overlay/: Orb.tsx  Overlay.tsx  Pill.tsx  main.tsx  types.ts  useOverlayController.ts
src/settings/: Settings.tsx  UpdateChecker.tsx  main.tsx
src/splash/: Splash.tsx  main.tsx
src/styles/: globals.css
